objects/Coaching_Exemption__c.object
<CustomObject>
    <fields>
        <fullName>Approver_Email__c</fullName>
        <description>to be updated by a workflow</description>
        <inlineHelpText>to be updated by a workflow</inlineHelpText>
        <label>Approver Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Coaching_Exemption__c</fullName>
        <label>Coaching Exemption</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exemption__c</fullName>
        <formula>/*IF( 
ISPICKVAL(Coaching_Exemption__c ,"Management"), 
CASE(TEXT(No_of_Days__c ),"1",0,"2",0.25,"3",0.50,"4",0.75,"5",1,1), 
CASE(TEXT(No_of_Days__c ),"1",0.20,"2",0.40,"3",0.60,"4",0.80,"5",1, 
IF( 
ISPICKVAL(Coaching_Exemption__c ,"Quality"), 
CASE(TEXT(No_of_Days__c ),"1",0.20,"2",0.40,"3",0.60,"4",0.80,"5",1,1), 
CASE(TEXT(No_of_Days__c ),"1",0.20,"2",0.40,"3",0.60,"4",0.80,"5",1,1 

))))*/1</formula>
        <label>Exemption %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Name_of_Approver__c</fullName>
        <description>Changes Done Case# 10843600</description>
        <formula>CASE(
TEXT(Team__c),
"CrowdCompass Queue","Vineet Puri",
"Event Builder","Vineet Puri",
"Creative","Vineet Puri",
"Event Queue","Vineet Puri",
"Support Ops","Kevin Maurer",
"Event CSC","Rachel Ruddock",
"SignUp4","Mike Tarver",
"CSN Queue","Vineet Puri",
"CSN CSC","Scott Castleman",
"CrowdCompass Project Coordinator","Scott Castleman",
"Supplier Success CSC","Scott Castleman",
"Survey CSC","Scott Castleman",
"Onsite","Zane Bennett",
"RFP Builder","Vineet Puri",
"Survey Queue","Vineet Puri",
"Events - Legacy Lanyon","Zane Bennett",
"Implementation Team","Allison Hamill",
"Lanyon Team","Vineet Puri",
"Meetings - Legacy Lanyon","Kevin Maurer",
"OA360","Zane Bennett",
"SA","Kerry Lambert",
"Inquisium PSG","Kevin Maurer",
"MTA","Allison Hamill",
"Travel and Transient PSG","Allison Hamill",
"Enterprise Onsite","Zane Bennett","Training","Kevin Maurer",
"Scott Castleman")</formula>
        <label>Name of Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Days__c</fullName>
        <formula>(5 * ( FLOOR( ( End_Date__c + 1 - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( End_Date__c + 1 - DATE( 1900, 1, 8), 7 ) ) ) 
- 
(5 * ( FLOOR( ( Start_Date__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Start_Date__c - DATE( 1900, 1, 8), 7 ) ) )

/*(End_Date__c - Start_Date__c)+1*/</formula>
        <label>No.of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTO_Taken__c</fullName>
        <label>PTO Taken</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Deny__c</fullName>
        <label>Reason for Deny</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor Name</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Coaching Exemption</relationshipLabel>
        <relationshipName>Coaching_Exemption</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Creative</fullName>
                </value>
                <value>
                    <fullName>CrowdCompass Queue</fullName>
                </value>
                <value>
                    <fullName>CrowdCompass Project Coordinator</fullName>
                    <label>CrowdCompass MSS</label>
                </value>
                <value>
                    <fullName>CSN Queue</fullName>
                </value>
                <value>
                    <fullName>Event Builder</fullName>
                </value>
                <value>
                    <fullName>Event CSC</fullName>
                </value>
                <value>
                    <fullName>Event Queue</fullName>
                </value>
                <value>
                    <fullName>Support Ops</fullName>
                </value>
                <value>
                    <fullName>Survey CSC</fullName>
                </value>
                <value>
                    <fullName>RFP Builder</fullName>
                </value>
                <value>
                    <fullName>Survey Queue</fullName>
                </value>
                <value>
                    <fullName>CSN CSC</fullName>
                </value>
                <value>
                    <fullName>Onsite</fullName>
                </value>
                <value>
                    <fullName>Enterprise Onsite</fullName>
                </value>
                <value>
                    <fullName>Events - Legacy Lanyon</fullName>
                </value>
                <value>
                    <fullName>Implementation Team</fullName>
                </value>
                <value>
                    <fullName>Lanyon Team</fullName>
                    <label>Lanyon Tier 1 (India)</label>
                </value>
                <value>
                    <fullName>Meetings - Legacy Lanyon</fullName>
                </value>
                <value>
                    <fullName>Inquisium PSG</fullName>
                </value>
                <value>
                    <fullName>MTA</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Travel and Transient PSG</fullName>
                </value>
                <value>
                    <fullName>OA360</fullName>
                </value>
                <value>
                    <fullName>Supplier Success CSC</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AQL</fullName>
                </value>
                <value>
                    <fullName>Assistant Manager</fullName>
                </value>
                <value>
                    <fullName>ATL</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>QA</fullName>
                </value>
                <value>
                    <fullName>QL</fullName>
                </value>
                <value>
                    <fullName>Senior Manager</fullName>
                </value>
                <value>
                    <fullName>SPC</fullName>
                </value>
                <value>
                    <fullName>TL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Coaching Exemption</label>
    <nameField>
        <displayFormat>CE-{0000}</displayFormat>
        <label>Coaching Exemption Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coaching Exemption</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All_CS_Requests</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Team__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Exemption__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Name_of_Approver__c</field>
            <operation>equals</operation>
            <value>Tim Blackwood</value>
        </filters>
        <label>All CS Requests</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_PS_Requests</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Team__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>No_of_Days__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Name_of_Approver__c</field>
            <operation>equals</operation>
            <value>Zane Bennett,Steven Bushey</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>PS Requests (last 3 months)</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Exemptions</fullName>
        <columns>NAME</columns>
        <columns>Requestor_Name__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approver_Email__c</field>
            <operation>equals</operation>
            <value>eglazyrin@cvent.com</value>
        </filters>
        <label>Exemptions</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Coaching_Exemptions2</fullName>
        <columns>NAME</columns>
        <columns>Reason__c</columns>
        <columns>Description__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Coaching Exemptions</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <validationRules>
        <fullName>Start_Date_cannot_be_greater_than_End_D</fullName>
        <active>true</active>
        <errorConditionFormula>if ( End_Date__c &lt; Start_Date__c, True, False)</errorConditionFormula>
        <errorMessage>Please Check! Start Date cannot be greater than End Date</errorMessage>
    </validationRules>
</CustomObject>